--- a/src/banner/banner.css
+++ b/src/banner/banner.css
@@ -1,33 +1,106 @@
 html, body{
     margin: 0;
-    padding: 0;
+}
+
+body{
+    background-color: #fafafa;
+    overflow-x: hidden;
+    width: 100vw;
+    height: 3000px;
+    font-family: 'Lato';
 }
 
 .cover{
-    width: 100vw;
-    height: 512px;
+    width: 100%;
+    height: 70vh;
     overflow: hidden;
     position: relative;
 }
 
 .cover img{
-    filter: grayscale(100%) contrast(150%) brightness(80%) sepia(10%);
-    max-width: 100%;
-    max-height: 100%;
     width: 100%;
-    height: 100%;
+    height: 70vmin;
     object-fit: cover;
-    object-position: center top;
+
+    filter: grayscale(90%) contrast(80%) brightness(80%) sepia(15%);
+
+    animation: img-move auto both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 70vh;
 }
 
-.centered{
+@keyframes img-move{
+    from{
+        object-position: center 30%;
+    }
+    to{
+        object-position: center 70%;
+    }
+}
+
+.cover p{
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 12vmax;
+    font-weight: bold;
+    color: #fafafa;
+}
+
+
+.absolute-row{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    position: absolute;
+    width: 80%;
+    height: 50%;
+}
+
+#first-sentence{
+    align-items: flex-end;
+
+    animation: show-first auto both;
+    animation-timeline: scroll(root block);
+    animation-range: entry 0% cover 15%;
+}
+
+@keyframes show-first{
+    from{
+        top: -15%;
+        left: 0;
+        scale: 80%;
+    }
+    to{
+        top: 0;
+        left: 10%;
+        scale: 100%;
+    }
+}
+
+#second-sentence{
+    align-items: flex-start;
+    justify-content: flex-end;
+
+    animation: show-second auto both;
+    animation-timeline: scroll(root block);
+    animation-range: entry 5% cover 20%;
+}
+
+@keyframes show-second{
+    from{
+        top: 65%;
+        left: 20%;
+        scale: 50%;
+        opacity: 0;
+    }
+    to{
+        top: 50%;
+        left: 10%;
+        scale: 100%;
+        opacity: 1;
+    }
 }
 
 .spacer{
     width: 100vw;
-    height: 1024px;
-    background-color: #fafafa;
+    height: 512px;
 }
